# identity-risk-engine

./: .gitignore  CHANGELOG_IRE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default_policy.yaml
dashboard/: __init__.py  metrics_dashboard.py
demo_outputs/: benchmark_output_ire.txt  benchmark_repro_ire.txt  benchmark_table_generation_ire.txt  benchmark_table_ire.json  benchmark_table_ire.md  cli_report_output_ire.txt  cli_score_output_ire.txt  cli_simulate_output_ire.txt  cli_timing_report_ire.txt  cli_timing_score_ire.txt  cli_timing_simulate_ire.txt  fastapi_health_ire.txt  fastapi_simulate_ire.txt  test_output_ire.txt  test_output_ire_final.txt  test_output_ire_fixes.txt  verification_loop_impossible_travel.txt  verification_loop_ire.txt
examples/fastapi_demo/: README_ire.md  app_ire.py
notebooks/: cohort_analysis.ipynb  demo.ipynb
scripts/: generate_benchmark_table_ire.py
src/identity_risk_engine/: __init__.py  behavior_anomaly.py  cli_ire.py  composite_scorer.py  device_fingerprint.py  events.py  explainer_ire.py  geo_velocity.py  policy_engine.py  risk_engine_ire.py  simulator_ire.py  synthetic_data_generator.py
src/identity_risk_engine/signals/: __init__.py  _common.py  signals_behavior_ire.py  signals_device_ire.py  signals_geo_ire.py  signals_passkey_ire.py  signals_recovery_ire.py
tests/: test_behavior_anomaly.py  test_cli_ire.py  test_composite_scorer.py  test_device_fingerprint.py  test_events_ire.py  test_explainer_ire.py  test_fastapi_ire.py  test_geo_velocity.py  test_policy_engine_ire.py  test_risk_engine_ire.py  test_signals_ire.py  test_synthetic_data.py
