[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "identity-risk-engine"
version = "0.2.0"
description = "Open-source session-level identity risk scoring for fintech"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "identity-risk-engine contributors" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "plotly>=5.0",
  "scipy>=1.11",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "jupyter>=1.0",
  "nbconvert>=7.0",
  "httpx>=0.27",
  "pytest-cov>=5.0",
]

[project.scripts]
identity-risk-engine = "identity_risk_engine.cli_ire:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]
